# geolint

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  action.yml  pyproject.toml  requirements.txt  run_geolint.py  run_tests.py
.github/workflows/: workflow.yml
examples/: geolint.toml  github-workflow.yml
geolint/: __init__.py
geolint/cli/: __init__.py  main.py
geolint/core/: __init__.py  batch.py  checks.py  config.py  contracts.py  crs.py  duckdb_backend.py  error_layer.py  findings.py  geometry.py  io.py  profiles.py  report.py  sarif.py  transform.py  validation.py
geolint/interactive/: __init__.py  repl.py  session.py  ui.py  wizard.py
geolint/web/: __init__.py  app.py  components.py  styles.css
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_interactive.py
tests/cli/: test_cli.py
tests/core/: test_batch.py  test_checks.py  test_crs.py  test_geometry.py  test_multilayer.py  test_phase2.py  test_phase3.py  test_phase4.py  test_profiles.py  test_report.py  test_topology_checks.py  test_transform.py  test_validation.py
