[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geolint"
version = "0.2.0"
description = "Geospatial data linting and validation tool"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Mahad Imran", email = "mahad.imran29@gmail.com"},
]
keywords = ["geospatial", "gis", "validation", "vector", "crs", "geometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.14.0",
    "pyproj>=3.4.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "rtree>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
web = ["streamlit>=1.28.0", "pydeck>=0.8.0"]
yaml = ["pyyaml>=6.0"]
duckdb = ["duckdb>=0.10.0"]
cloud = ["fsspec>=2023.0.0", "s3fs>=2023.0.0"]

[project.urls]
Homepage = "https://github.com/CONFUZ3/geolint"
Repository = "https://github.com/CONFUZ3/geolint"
Documentation = "https://github.com/CONFUZ3/geolint#readme"
"Bug Tracker" = "https://github.com/CONFUZ3/geolint/issues"

[project.scripts]
geolint = "geolint.cli.main:app"
geolint-precommit = "geolint.cli.main:precommit_app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["geolint*"]

[tool.setuptools.package-data]
"geolint.web" = ["styles.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=geolint",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
